--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 
     <meta name="description" content="FireAlert: App de detección de humo conectada a Arduino. Alertas en tiempo real en tu Android.">
     
+    <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🔥</text></svg>">
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700;900&display=swap" rel="stylesheet">
@@ -174,8 +176,8 @@
         </main>
 
         <footer>
-            <p>&copy; 2025 FireAlert. Proyecto de Desarrollo de Interfaces.</p>
-            <p class="footer-devs">Creado con Android Studio, Java y Arduino.</p>
+            <p>&copy; 2025 FireAlert. Un proyecto de <strong>IPE</strong>.</p>
+            <p class="footer-devs">Creado por <strong>Adrian, Rafa, Oscar y Alejandro</strong>.</p>
         </footer>
     </div>
 
