--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
         <main>
             <section class="hero">
-                <h2>OSCAR CAIZ GAY</h2>
+                <h2>SEGURIDAD INTELIGENTE</h2>
                 <p class="subtitle">Protege lo que más importa. FireAlert conecta tu sistema Arduino con tu móvil para enviarte notificaciones críticas de humo al instante.</p>
 
                 <div id="hero-actions">
