Añadido el enlace a la descarga del APK. Firmado: Oscar Pancho

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 <p class="subtitle">Protege lo que más importa. FireAlert conecta tu sistema Arduino con tu móvil para enviarte notificaciones críticas de humo al instante.</p>
 
                 <div id="hero-actions">
-                    <a href="#" class="cta-button download-button">
+                    <a href="https://github.com/Sinn0mbre222/DetectorDeHumosIPE/releases/download/v1/FireAlert-V1.apk" class="cta-button download-button">
                         <i class="fa-brands fa-android"></i>
                         <span>Descargar APK</span>
                     </a>
