Cambio en lo más importante

--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
         </main>
 
         <footer>
-            <p>&copy; 2025 FireAlert. Un proyecto de <strong>IPE</strong>.</p>
+            <p>&copy; 2025 FireAlert. Un proyecto de <strong>Ecentia</strong>.</p>
             <p class="footer-devs">Creado por <strong>Adrian, Rafa, Oscar y Alejandro</strong>.</p>
         </footer>
     </div>
